--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
@@ -51,13 +51,16 @@ install(TARGETS
         RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
         )
 
-install(DIRECTORY
-        drivers/roboteq_driver/include/
-        include/${PROJECT_NAME}/
+install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
         FILES_MATCHING
         PATTERN "*.h"
         PATTERN "*.hpp"
+        PATTERN ".svn" EXCLUDE
+        )
+
+install(DIRECTORY drivers/roboteq_driver/include/
+        DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
         PATTERN ".svn" EXCLUDE
         )
 
