--- a/uwrt_mars_rover_description/cfg/controller.yaml
+++ b/uwrt_mars_rover_description/cfg/controller.yaml
@@ -1,4 +1,4 @@
-robot_ex:
+uwrt_mars_rover_sim:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
@@ -9,17 +9,17 @@ robot_ex:
     type: "diff_drive_controller/DiffDriveController"
     publish_rate: 50
 
-    left_wheel: ['wheel_back_left_to_rocker', 'wheel_front_left_to_rocker']
-    right_wheel: ['wheel_back_right_to_rocker', 'wheel_front_right_to_rocker']
+    left_wheel: ['wheel_left_back_to_rocker', 'wheel_left_front_to_rocker']
+    right_wheel: ['wheel_right_back_to_rocker', 'wheel_right_front_to_rocker']
 
-    wheel_separation: 0.5
-    wheel_radius: 0.125
+    wheel_separation: 0.762
+    wheel_radius: 0.1524
 
     # Odometry covariances for the encoder output of the robot. These values should
     # be tuned to your robot's sample odometry data, but these values are a good place
     # to start
-    pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+    pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+    twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
 
     # Top level frame (link) of the robot description
     base_frame_id: base_link
